--- v1.0 (2016-xx-xx) ---
*** common ***
* Update sample of sibuserv config.
*** build-supervisor ***
* Use cppcheck for static code analysis only when it is available.
* Move cppcheck logs into StaticCodeAnalysis subdirectory.
* Add options:
  - STATIC_CODE_ANALYSIS_LOGS_SUBDIR
  - ENABLE_STATIC_CODE_ANALYSIS
  - ENABLE_CPPCHECK_LOG
  - ENABLE_CPPCHECK_XML
  - ENABLE_CPPCHECK_HTML
  - CPPCHECK_OPTIONS

--- v0.9 (2016-03-28) ---
*** common ***
* Add sample of systemd service file.
* Add sample of sibuserv config.
* Add 'download' target into Makefile.
* Remove 'link' target from Makefile.
*** build-supervisor ***
* Write more details into log file.
* Check the existence of SOURCES_DIR.
* Add support of system and user configs:
  - /etc/sibuserv/sibuserv.conf
  - ~/.config/sibuserv/sibuserv.conf
* Update default settings.
*** build-project ***
* Update QT_MAJOR_VER from 5.5 to 5.6.
* Update default Android NDK version from r10d to r10e.
* Update path to OpenJDK from 1.7.x to 1.8.x.
* Add support of system and user configs:
  - /etc/sibuserv/sibuserv.conf
  - ~/.config/sibuserv/sibuserv.conf
* Update default settings.

--- v0.8 (2015-07-10) ---
* First public release.
